Add cursor pointer to eruda button

--- a/src/EntryBtn/EntryBtn.scss
+++ b/src/EntryBtn/EntryBtn.scss
@@ -14,6 +14,7 @@
     font-size: 25px;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     &.active,
     &:active {
       opacity: 0.8;
