--- a/src/Elements/Elements.scss
+++ b/src/Elements/Elements.scss
@@ -1,6 +1,10 @@
 @import '../style/variable';
 @import '../style/mixin';
 
+.hidden {
+  display: none;
+}
+
 #elements {
   &.split-view {
     display: flex;
@@ -35,10 +39,13 @@
       right: 0;
     }
     .icon-copy {
+      right: 120px;
+    }
+    .icon-play {
       right: 80px;
     }
     .icon-delete {
-      right: 120px;
+      right: 160px;
     }
   }
   .dom-viewer-container {
@@ -121,6 +128,62 @@
         background: var(--highlight);
         color: var(--select-foreground);
       }
+    }
+  }
+  .element-input {
+    overflow: hidden;
+    pointer-events: none;
+    position: absolute;
+    z-index: 100;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid var(--border);
+    height: 100%;
+    border-top: none;
+    .element-buttons {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      width: 100%;
+      height: 40px;
+      color: var(--primary);
+      background: var(--darker-background);
+      font-size: $font-size-s;
+      border-top: 1px solid var(--border);
+      .button {
+        pointer-events: all;
+        cursor: pointer;
+        flex: 1;
+        text-align: center;
+        border-right: 1px solid var(--border);
+        height: 40px;
+        line-height: 40px;
+        transition: background-color $anim-duration, color $anim-duration;
+        &:last-child {
+          border-right: none;
+        }
+        &:active {
+          color: var(--select-foreground);
+          background: var(--highlight);
+        }
+      }
+    }
+    textarea {
+      pointer-events: all;
+      padding: 3px 10px;
+      outline: none;
+      border: none;
+      font-size: $font-size;
+      width: 100%;
+      height: calc(100% - 40px);
+      user-select: text;
+      resize: none;
+      color: var(--primary);
+      background: var(--background);
+      overflow: auto;
+      padding-left: 10px;
     }
   }
   .attributes {
@@ -207,7 +270,10 @@
     }
   }
   .styles {
-    font-size: $font-size-s;
+    font-size: $font-size-s;    
+    .icon-delete {
+      display: none;
+    }
     .porperty-color {
       color: #78DCE8 !important;
     }
@@ -312,6 +378,12 @@
           padding-left: 2em;
           word-break: break-all;
           order: 1;
+          cursor: pointer;
+          &:hover {
+            i {
+              display: inline-block !important;
+            }
+          }
           a {
             color: var(--link-color);
           }
@@ -373,11 +445,14 @@
         .icon-eye {
           display: none;
         }
-        .icon-copy {
+        .icon-play {
           right: 40px;
         }
-        .icon-delete {
+        .icon-copy {
           right: 80px;
+        }
+        .icon-delete {
+          right: 120px;
         }
         .show-split {
           right: 0;
