--- a/src/Resources/Resources.scss
+++ b/src/Resources/Resources.scss
@@ -83,7 +83,7 @@
       border: none;
       font-size: $font-size;
       width: 100%;
-      height: 100%;
+      height: calc(100% - 40px);
       user-select: text;
       resize: none;
       color: var(--primary);
