--- a/src/Info/Info.scss
+++ b/src/Info/Info.scss
@@ -1,14 +1,14 @@
-@import '../style/variable';
-@import '../style/mixin';
+@use '../style/variable';
+@use '../style/mixin';
 
 #info {
-  @include overflow-auto(y);
+  @include mixin.overflow-auto(y);
   li {
     margin: 10px;
     border: 1px solid var(--border);
     .title,
     .content {
-      padding: $padding;
+      padding: variable.$padding;
     }
     .title {
       position: relative;
@@ -20,7 +20,7 @@
         top: 14px;
         color: var(--primary);
         cursor: pointer;
-        transition: color $anim-duration;
+        transition: color variable.$anim-duration;
         &:active {
           color: var(--accent);
         }
@@ -30,7 +30,7 @@
       margin: 0;
       user-select: text;
       color: var(--foreground);
-      font-size: $font-size-s;
+      font-size: variable.$font-size-s;
       word-break: break-all;
       table {
         width: 100%;
@@ -56,5 +56,5 @@
 }
 
 .safe-area #info {
-  @include safe-area(padding-bottom, 10px);
+  @include mixin.safe-area(padding-bottom, 10px);
 }
