--- a/src/DevTools/DevTools.scss
+++ b/src/DevTools/DevTools.scss
@@ -1,5 +1,5 @@
-@import '../style/variable';
-@import '../style/mixin';
+@use '../style/variable';
+@use '../style/mixin';
 
 .dev-tools {
   position: absolute;
@@ -12,7 +12,7 @@
   display: none;
   padding-top: 40px !important;
   opacity: 0;
-  transition: opacity $anim-duration;
+  transition: opacity variable.$anim-duration;
   border-top: 1px solid var(--border);
   .resizer {
     position: absolute;
@@ -24,12 +24,12 @@
     z-index: 120;
   }
   .tools {
-    @include overflow-auto();
+    @include mixin.overflow-auto();
     height: 100%;
     width: 100%;
     position: relative;
     .tool {
-      @include absolute();
+      @include mixin.absolute();
       overflow: hidden;
       display: none;
     }
