--- a/src/style/mixin.scss
+++ b/src/style/mixin.scss
@@ -1,4 +1,4 @@
-@import './variable';
+@use 'variable';
 
 @mixin absolute($width: 100%, $height: 100%) {
   position: absolute;
@@ -27,8 +27,8 @@
   user-select: text;
   margin-bottom: 10px;
   word-break: break-all;
-  padding: $padding;
-  font-size: $font-size-l;
+  padding: variable.$padding;
+  font-size: variable.$font-size-l;
   min-height: 40px;
   border-bottom: 1px solid var(--border);
 }
@@ -45,11 +45,11 @@
   [class*=' icon-'] {
     display: inline-block;
     padding: 10px;
-    font-size: $font-size-l;
+    font-size: variable.$font-size-l;
     position: absolute;
     top: 0;
     cursor: pointer;
-    transition: color $anim-duration;
+    transition: color variable.$anim-duration;
     &:active,
     &.active {
       color: var(--accent);
@@ -72,13 +72,13 @@
     color: var(--primary);
     width: 18px;
     height: 18px;
-    font-size: $font-size-l;
+    font-size: variable.$font-size-l;
     cursor: pointer;
-    transition: color $anim-duration;
+    transition: color variable.$anim-duration;
     &.filter-text {
       width: auto;
       max-width: 80px;
-      font-size: $font-size;
+      font-size: variable.$font-size;
       overflow: hidden;
       font-weight: normal;
       text-overflow: ellipsis;
