--- a/src/Console/Console.scss
+++ b/src/Console/Console.scss
@@ -115,7 +115,7 @@
       border: none;
       font-size: variable.$font-size;
       width: 100%;
-      height: calc(100% - 40px);
+      height: 100%;
       user-select: text;
       resize: none;
       color: var(--primary);
